uploaded new documents. reformated.

--- a/research_notebook/bibliographies/software.bib
+++ b/research_notebook/bibliographies/software.bib
@@ -11,3 +11,15 @@
   doi       = {10.5281/zenodo.4296287},
   url       = {https://doi.org/10.5281/zenodo.4296287}
 }
+@misc{torchfilter,
+  author = {standford-iprl-lab},
+  title  = {{torchfilter}: Bayesian Filters in PyTorch},
+  month  = nov,
+  year   = 2020
+}
+@misc{torchcast,
+  author = {strongio},
+  title  = {{torchfilter}: Forecasting with PyTorch},
+  month  = nov,
+  year   = 2020
+}
