--- a/code/jax/notebooks/nerf/nerf.ipynb
+++ b/code/jax/notebooks/nerf/nerf.ipynb
@@ -234,9 +234,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jax_py39]",
+   "display_name": "Python 3.7.3 64-bit",
    "language": "python",
-   "name": "conda-env-jax_py39-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +248,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
