updated advection nb.

--- a/research_notebook/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
+++ b/research_notebook/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Convection"
+    "# 1D Linear Convection"
    ]
   },
   {
@@ -14,7 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install jaxtyping diffrax xarray FiniteDiffX"
+    "# !pip install --upgrade jax jaxlib\n",
+    "# !pip install jaxtyping diffrax xarray FiniteDiffX jaxdf"
    ]
   },
   {
@@ -39,6 +40,28 @@
     "jax.config.update(\"jax_enable_x64\", True)\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's continue from the previous tutorial. Recall, we are working with a 1D Linear Convection scheme:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial u}{\\partial t} + c \\frac{\\partial u}{\\partial x} = 0\n",
+    "$$ (pde)\n",
+    "\n",
+    "For the PDE {eq}`pde`, we are going to do a backwards difference discretization in space and a forwards in time."
    ]
   },
   {
