--- a/_sources/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
+++ b/_sources/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
@@ -43,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -70,15 +77,6 @@
    "metadata": {},
    "source": [
     "## Geometry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jaxdf.geometry import Domain"
    ]
   },
   {
@@ -167,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jaxdf.discretization import FiniteDifferences\n",
+    "from jaxdf.discretization import FiniteDifferences, OnGrid\n",
     "from jaxdf.operators import gradient\n",
     "\n",
     "\n",
@@ -238,6 +236,77 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Custom Difference Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jaxdf import operator\n",
+    "import equinox as eqx\n",
+    "from jaxtyping import Float, Array\n",
+    "\n",
+    "\n",
+    "class FDParams(eqx.Module):\n",
+    "    axis: int = eqx.static_field()\n",
+    "    accuracy: int = eqx.static_field()\n",
+    "    method: str = eqx.static_field()\n",
+    "\n",
+    "    def __init__(self, axis=0, accuracy=1, method=\"backward\"):\n",
+    "        self.axis = axis\n",
+    "        self.accuracy = accuracy\n",
+    "        self.method = method\n",
+    "\n",
+    "\n",
+    "@operator\n",
+    "def difference(u: OnGrid, *, params: tp.Optional[FDParams] = None):\n",
+    "    if params is None:\n",
+    "        params = FDParams()\n",
+    "\n",
+    "    u_values = u.on_grid\n",
+    "\n",
+    "    u_values = fdx.difference(\n",
+    "        u_values,\n",
+    "        axis=params.axis,\n",
+    "        accuracy=params.accuracy,\n",
+    "        method=params.method,\n",
+    "        step_size=u.domain.dx[params.axis],\n",
+    "    )\n",
+    "\n",
+    "    # update grid\n",
+    "    u = u.replace_params(u_values)\n",
+    "\n",
+    "    return u, params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def equation_of_motion_custom(t: Array, u: FiniteDifferences, args: tuple):\n",
+    "    c = args\n",
+    "\n",
+    "    # initialize grid\n",
+    "    u = OnGrid.from_grid(u, domain)\n",
+    "\n",
+    "    u_rhs = -c * difference(u)\n",
+    "\n",
+    "    return u_rhs.on_grid\n",
+    "\n",
+    "\n",
+    "out_custom = equation_of_motion_custom(0, u_init, c)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -248,8 +317,8 @@
     "ax.plot(domain.spatial_axis[0], u_init[..., 0], label=\"Initial Condition\")\n",
     "ax.plot(domain.spatial_axis[0], out[..., 0], label=\"JaxDF\")\n",
     "ax.plot(domain.spatial_axis[0], out_scratch[..., 0], label=\"Scratch\")\n",
+    "ax.plot(domain.spatial_axis[0], out_custom[..., 0], label=\"Custom\")\n",
     "\n",
-    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -287,14 +356,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### `JAXDF` API"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -304,59 +365,21 @@
     "solver = dfx.Euler()\n",
     "stepsize_controller = dfx.ConstantStepSize()\n",
     "\n",
-    "\n",
-    "sol = dfx.diffeqsolve(\n",
-    "    terms=dfx.ODETerm(equation_of_motion),\n",
+    "integration_fn = lambda u, f: dfx.diffeqsolve(\n",
+    "    terms=dfx.ODETerm(f),\n",
     "    solver=solver,\n",
     "    t0=ts.min(),\n",
     "    t1=ts.max(),\n",
     "    dt0=dt,\n",
-    "    y0=u_init,\n",
+    "    y0=u,\n",
     "    saveat=saveat,\n",
     "    args=c,\n",
     "    stepsize_controller=stepsize_controller,\n",
-    ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### From Scratch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Euler, Constant StepSize\n",
-    "solver = dfx.Euler()\n",
-    "stepsize_controller = dfx.ConstantStepSize()\n",
+    ")\n",
     "\n",
-    "\n",
-    "sol_scratch = dfx.diffeqsolve(\n",
-    "    terms=dfx.ODETerm(equation_of_motion_scratch),\n",
-    "    solver=solver,\n",
-    "    t0=ts.min(),\n",
-    "    t1=ts.max(),\n",
-    "    dt0=dt,\n",
-    "    y0=u_init,\n",
-    "    saveat=saveat,\n",
-    "    args=c,\n",
-    "    stepsize_controller=stepsize_controller,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.asarray(sol.ys).squeeze().shape"
+    "sol = integration_fn(u_init, equation_of_motion)\n",
+    "sol_scratch = integration_fn(u_init, equation_of_motion_scratch)\n",
+    "sol_custom = integration_fn(u_init, equation_of_motion_custom)"
    ]
   },
   {
@@ -377,6 +400,7 @@
     "    {\n",
     "        \"jaxdf\": ((\"time\", \"x\"), np.asarray(sol.ys).squeeze()),\n",
     "        \"scratch\": ((\"time\", \"x\"), np.asarray(sol_scratch.ys).squeeze()),\n",
+    "        \"custom\": ((\"time\", \"x\"), np.asarray(sol_custom.ys).squeeze()),\n",
     "    },\n",
     "    coords={\n",
     "        \"x\": ([\"x\"], np.asarray(domain.spatial_axis[0])),\n",
@@ -393,14 +417,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=2, figsize=(7, 5))\n",
+    "fig, ax = plt.subplots(nrows=3, figsize=(5, 7))\n",
     "\n",
     "da_sol.jaxdf.T.plot.pcolormesh(ax=ax[0], cmap=\"gray_r\")\n",
     "da_sol.scratch.T.plot.pcolormesh(ax=ax[1], cmap=\"gray_r\")\n",
+    "da_sol.custom.T.plot.pcolormesh(ax=ax[2], cmap=\"gray_r\")\n",
     "\n",
     "ax[0].set_title(\"JaxDF\")\n",
     "ax[1].set_title(\"Scratch\")\n",
+    "ax[2].set_title(\"Custom\")\n",
     "\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -410,14 +438,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=2, figsize=(7, 5))\n",
+    "fig, ax = plt.subplots(nrows=3, figsize=(5, 7))\n",
     "\n",
     "for i in range(0, len(da_sol.time), 5):\n",
     "    da_sol.jaxdf.isel(time=i).plot.line(ax=ax[0], color=\"gray\")\n",
     "    da_sol.scratch.isel(time=i).plot.line(ax=ax[1], color=\"gray\")\n",
+    "    da_sol.custom.isel(time=i).plot.line(ax=ax[2], color=\"gray\")\n",
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
