--- a/_sources/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
+++ b/_sources/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
@@ -43,13 +43,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -177,7 +170,7 @@
     "\n",
     "    u.accuracy = 2\n",
     "\n",
-    "    u_rhs = -c * gradient(u)\n",
+    "    u_rhs = -c * gradient(u, stagger=[1])\n",
     "\n",
     "    return u_rhs.on_grid"
    ]
@@ -211,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jaxdf.discretization import FiniteDifferences\n",
+    "from jaxdf.discretization import FiniteDifferences, FourierSeries\n",
     "from jaxdf.operators import gradient\n",
     "\n",
     "\n",
@@ -265,13 +258,20 @@
     "        self.method = method\n",
     "\n",
     "\n",
+    "class Field(eqx.Module):\n",
+    "    u: Array\n",
+    "    domain: Domain\n",
+    "\n",
+    "\n",
     "@operator\n",
     "def difference(u: OnGrid, *, params: tp.Optional[FDParams] = None):\n",
     "    if params is None:\n",
     "        params = FDParams()\n",
     "\n",
+    "    # extract params from grid object\n",
     "    u_values = u.on_grid\n",
     "\n",
+    "    # apply custom FD method\n",
     "    u_values = fdx.difference(\n",
     "        u_values,\n",
     "        axis=params.axis,\n",
@@ -292,13 +292,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from jaxdf import operator\n",
+    "import equinox as eqx\n",
+    "from jaxtyping import Float, Array\n",
+    "\n",
+    "\n",
+    "class FDParams(eqx.Module):\n",
+    "    axis: int = eqx.static_field()\n",
+    "    accuracy: int = eqx.static_field()\n",
+    "    method: str = eqx.static_field()\n",
+    "\n",
+    "    def __init__(self, axis=0, accuracy=1, method=\"backward\"):\n",
+    "        self.axis = axis\n",
+    "        self.accuracy = accuracy\n",
+    "        self.method = method\n",
+    "\n",
+    "\n",
+    "class Field(eqx.Module):\n",
+    "    u: Array\n",
+    "    domain: Domain\n",
+    "\n",
+    "    def __init__(self, domain, init_fn: tp.Callable):\n",
+    "        self.u = init_fn(domain)\n",
+    "        self.domain = domain\n",
+    "\n",
+    "    @property\n",
+    "    def values(self):\n",
+    "        return self.u\n",
+    "\n",
+    "\n",
+    "@operator\n",
+    "def difference(u: Field, *, params: tp.Optional[FDParams] = None):\n",
+    "    if params is None:\n",
+    "        params = FDParams()\n",
+    "\n",
+    "    # apply custom FD method\n",
+    "    u_diff = fdx.difference(\n",
+    "        u.values,\n",
+    "        axis=params.axis,\n",
+    "        accuracy=params.accuracy,\n",
+    "        method=params.method,\n",
+    "        step_size=u.domain.dx[params.axis],\n",
+    "    )\n",
+    "\n",
+    "    # update grid\n",
+    "    u = eqx.tree_at(lambda x: x.u, u, u_diff)\n",
+    "\n",
+    "    return u, params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize Field\n",
+    "u_field = Field(domain, init_u0)\n",
+    "\n",
+    "# RHS of equation of motion\n",
+    "u_rhs = difference(u_field)\n",
+    "\n",
+    "u_rhs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = FDParams(axis=0, accuracy=1, method=\"backward\")\n",
+    "\n",
+    "u_rhs = difference(u_field, params=params)\n",
+    "u_rhs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def equation_of_motion_custom(t: Array, u: FiniteDifferences, args: tuple):\n",
     "    c = args\n",
     "\n",
     "    # initialize grid\n",
     "    u = OnGrid.from_grid(u, domain)\n",
+    "    # u = FourierSeries.from_grid(u, domain)\n",
     "\n",
-    "    u_rhs = -c * difference(u)\n",
+    "    print(u)\n",
+    "\n",
+    "    # initialize parameters (OPTIONAL)\n",
+    "    params = None  # FDParams()\n",
+    "\n",
+    "    u_rhs = -c * difference(u, params=params)\n",
     "\n",
     "    return u_rhs.on_grid\n",
     "\n",
@@ -319,6 +407,7 @@
     "ax.plot(domain.spatial_axis[0], out_scratch[..., 0], label=\"Scratch\")\n",
     "ax.plot(domain.spatial_axis[0], out_custom[..., 0], label=\"Custom\")\n",
     "\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -447,13 +536,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
