added more inv probs.

--- a/research_notebook/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
+++ b/research_notebook/content/tutorials/twelve_steps_ns/1.1_linear_advection.ipynb
@@ -181,6 +181,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from jaxdf.operators.differential import get_fd_coefficients\n",
+    "\n",
+    "u = FiniteDifferences.from_grid(u_init, domain)\n",
+    "\n",
+    "coeffs = get_fd_coefficients(u, order=1, stagger=1)\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "c = 1.0\n",
     "\n",
     "# initialize grid\n",
